2007-03-31  Per Bothner  <per@bothner.com>

	* Language.java (declFromField): Set IS_NAMESPACE_PREFIX if
	constant field's type is Namespace.

2007-03-20  Per Bothner  <per@bothner.com>

	* ClassExp.java (declareParts): Checking INTERFACE_SPECIFIED must be
	done earlier, in setTypes, before addClass is done.
	* ClassExp.java (compile): Don't generateConstructor if interface.
	(declareParts): Don't getConstructor if interface.
	* FindCapturedVars.java (walkClassExp): Likewise.

2007-03-19  Per Bothner  <per@bothner.com>

	Fix for Savannah bug #18846: Cannot inherit from non-static class
	* ClassExp.java (superClassIndex): New field.
	(setTypes): Set superClassIndex.
	(walkChildren): Walk supers array.
	(loadSuperStaticLink, invokeDefaultSuperConstructor): New methods.
	(compile): Call invokeDefaultSuperConstructor.
	* Compilation.java (generateConstructor): Likewise.
 	* PrimProcedure.java (compile): Use new ClassExp.loadSuperStaticLink.
	* LambdaExp.java (allocChildMethods): Neeed static link
	if getNeedsClosureEnv.

	* ClassExp.java (print): Print supers array.

	* ClassExp.java (setClassName): Inline into setTypes and remove.
	(setTypes): Allow define-simple-class to define interface and
	define-class to define class.
	(CLASS_SPECIFIED): New flag.
	(isMakingClassPair): No longer same as !simple.
	* Compilation.java (callInitMethods): Don't create separate instance
	class just because class is a PairClassType.

2007-03-13  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule): Don't fail if msg is null.

	* ClassExp.java (INTERFACE_SPECIFIED): New flag bit.
	(declareParts): Set interface if INTERFACE_SPECIFIED.
	Set class-level access flag (PUBLIC or package access).

	* Compilation.java (registerClass): Use new addModifiers method.

2007-03-13  Per Bothner  <per@bothner.com>

	* LambdaExp.java (inlineIn): Fix logic.
`<
2007-03-06  Per Bothner  <per@bothner.com>

	* Special.java (abstractSpecial): New constant.